modify：TCP/UDP相关补充

--- a/_posts/HTTP相关/2021-05-06-29 WebSocket.md
+++ b/_posts/HTTP相关/2021-05-06-29 WebSocket.md
@@ -39,7 +39,7 @@ typora-root-url: ..
 导致 HTTP 难以应用在动态页面、即时消息、网络游戏等要求 **实时通信** 的领域
 
 ## 特点
-1、是一个真正全双工的通信协议，**客户端和服务器都可以随时向对方发送数据**
+1、是一个真正全双工的通信协议，和 TCP 一样，**客户端和服务器都可以随时向对方发送数据**
 
 2、采用了 **二进制帧结构**，语法、语义与 HTTP 完全不兼容
 
