--- a/_posts/浏览器原理相关内容/2021-04-07-02 网络协议 - IPUDPTCP协议.md
+++ b/_posts/浏览器原理相关内容/2021-04-07-02 网络协议 - IPUDPTCP协议.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     02 网络协议 - TCP协议
+title:     02 网络协议 - IP/UDP/TCP协议
 subtitle:  
 date:       2021-04-07
 author:     
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 
 
-# 02 网络协议 - TCP协议
+# 02 网络协议 - IP/UDP/TCP协议
 
 性能指标：**首次渲染时长FP**（从页面加载到首次开始绘制的时长）
 
@@ -40,7 +40,10 @@ IP是非常底层的协议，只负责把数据包**传送到对方电脑**。
 <img src="/../img/assets_2019/image-20210407223945418.png" alt="image-20210407223945418" style="zoom:33%;" />
 
 #### 2. UDP：把数据包送达应用程序
-每个想访问网络的程序都需要绑定一个端口号，UDP**通过端口号把数据包分发给正确的程序**。
+
+一篇详解 UDP 的文章：[UDP详解](https://zhuanlan.zhihu.com/p/337678680)
+
+每个想访问网络的程序都需要绑定一个端口号，UDP **通过端口号把数据包分发给正确的程序**。
 
 ##### 一个数据包从主机A旅行到主机B程序的路线
 注意：和IP头一样，端口号会被装进UDP头里面，UDP头再和原始数据包合并组成新的UDP数据包。UDP头中除了目的端口，还有源端口号等信息
@@ -49,12 +52,17 @@ IP是非常底层的协议，只负责把数据包**传送到对方电脑**。
 
 - 优点：传输速度快
 - 缺点：不能保证数据的可靠性
-    -   数据包在传输过程中**容易丢失**；
-    -   无法将小数据包还原成完整文件；
-    （UDP可以校验数据是否正确，但是对于错误的数据包，UDP并不提供重发机制，只是**丢弃**当前的包，而且UDP在发送之后也无法知道是否能达到目的地）
+    - 数据包在传输过程中 **容易丢失**；
+    
+    - 无法将小数据包还原成完整文件；
+    
+        （UDP可以校验数据是否正确，但是对于错误的数据包，UDP并不提供重发机制，只是 **丢弃** 当前的包，而且UDP在发送之后也无法知道是否能达到目的地）
 - 应用场景：关注速度、但不那么严格要求数据完整性的领域，如在线视频、互动游戏等
 
 #### 3. TCP：把数据完整地送达应用程序
+
+一篇写得很细的博文：[TCP 的那些事儿（上）](https://coolshell.cn/articles/11564.html)、[TCP 的那些事儿（下）](https://coolshell.cn/articles/11609.html)
+
 TCP（Transmission Control Protocol，传输控制协议）是一种面向连接的、可靠的、基于字节流的传输层通信协议。
 
 - 优点：
