--- a/_posts/JS原生基础相关/2019-06-20-数据类型深入：栈堆.md
+++ b/_posts/JS原生基础相关/2019-06-20-数据类型深入：栈堆.md
@@ -7,7 +7,7 @@ author:
 header-img: 
 catalog: true
 tags:
-    - < 黑马视频 >知识点
+    - < JS原生基础相关 >
 typora-root-url: ..
 ---
 
@@ -23,7 +23,7 @@ typora-root-url: ..
 
 - 引用类型的值在哪一块空间中存储? **对象在堆上存储,地址在栈上存储**
 
-<img src="/../img/assets_2019/栈堆1.png" style="zoom:43%;" />
+<img src="/../img/assets_2019/image-20210721192309985.png" alt="image-20210721192309985" style="zoom:72%;" />
 
 如上图所示，基本值类型：Number类型`num=10;`、Boolean类型`flag=true;`、String类型`str="您好";`值都是直接存储在栈上的；引用类型的值，内容都是在堆中开辟空间存储的，而变量obj1、obj2、obj3中存储的是指向堆中对象的地址。
 
