add：函数柯里化

--- a/_posts/JS原生基础相关/2019-06-10-数据类型.md
+++ b/_posts/JS原生基础相关/2019-06-10-数据类型.md
@@ -30,30 +30,46 @@ js中的数据类型有哪些?
 
   - 变量声明了,没有赋值,结果是undefined;
   - 函数没有明确返回值,如果接收了,结果也是undefined
+  
+  
+  
+- 补充：**<span style="color:red">类数组对象</span>** 是什么？
 
-  ##### 如何获取这个变量的数据类型是什么?
+    - 1）拥有 `length` 属性，其它属性（索引）为非负整数
 
-  -  (基本类型用typeof，判断是什么类型的对象，就用instanceof)
+    - 2）不具有数组所具有的方法
+    
+    JS 中常见的类数组有 `arguments` 对象和 DOM 方法的返回结果，比如 `document.getElementsByTagName() `
+    
 
-    方法一：typeof
+
+
+##### 如何获取这个变量的数据类型是什么?
+
+(基本类型用typeof，判断是什么类型的对象，就用instanceof)
+
+方法一：typeof
 
 ```javascript
 var num=10;
 console.log(typeof num);//获取num这个变量的数据类型
 ```
-​			方法二：instanceof
+方法二：instanceof
 ```javascript
 var obj={};//对象
 //判断这个对象是不是某个类型的
 console.log(obj instanceof Object);
 ```
-​			方法三：[object Array]
+方法三：[object Array]
 ```javascript
 //获取某个对象的数据类型 [object Array]
 Object.prototype.toString.call(对象：[arr]);//此时得到的就是这个对象的类型
 ```
 
+
+
 ## 数字类型
+
 js中可以表示哪些进制？
 ```javascript
 var num = 10;//十进制
