--- a/_posts/JS原生基础相关/2019-06-15-操作运算符.md
+++ b/_posts/JS原生基础相关/2019-06-15-操作运算符.md
@@ -13,9 +13,11 @@ typora-root-url: ..
 
 ## 运算符[重点]和关键词
 
-优先级最高的运算符----圆括号（）；
+优先级最高的运算符----圆括号（）
 
-### 算数运算符: +、-、*、/、%
+
+
+#### 算数运算符: +、-、*、/、%
  	算数运算表达式:由算数运算符连接起来的表达式；
  	一元运算符: 这个操作符只需要一个操作数就可以运算的符号 ++ -- 分为：前+ 和后+  and   前- 和后-；
 
@@ -29,24 +31,32 @@ var sum = num++ +10; //20
 ​    二元运算符: 这个操作符需要两个操作数就可以运算；
 ​	三元运算符: 表达式1 ? 表达式2 : 表达式3;
 
-### 复合运算符: +=、-=、*=、/=、%=
+
+
+#### 复合运算符: +=、-=、*=、/=、%=
 
  复合运算表达式:由复合运算符连接起来的表达式；
 
 
-### 关系运算符: >、<、>= 、<=、== 、 === 、 !=  、 !==
+
+
+#### 关系运算符: >、<、>= 、<=、== 、 === 、 !=  、 !==
  关系运算表达式:由关系运算符连接起来的表达式；
  关系运算表达式的结果是布尔类型；
 
 **不相同的数据类型进行比较时**，**首先会自动将其转换成为相同类型的数据后再进行比较**；
 
 
-### 逻辑运算符:
+
+#### 逻辑运算符:
+
 -  &&---逻辑与--并且
 - ||---  逻辑或---或者
 -   ! ---  逻辑非--- 取反/取非
 
 逻辑运算符的结果也是布尔类型；
+
+
 
 #### 逻辑运算表达式:
 
@@ -62,13 +72,17 @@ var sum = num++ +10; //20
   表达式1的结果是true,整个结果为false；
   表达式1的结果是false,整个结果为true；
 
-### 赋值运算符:  = 
+
+
+#### 赋值运算符:  = 
 优先级别最低，结合性**“从右向左”**
 
-## 关键字的使用break，continue
+
+
+#### 关键字的使用 - break，continue
 **注意**：continue和break语句还可以**跳转到指定的标签语句处**；如：break outloop；
 
-- break关键字:如果在循环中使用,遇到了break,则**立刻跳出当前所在的循环**
+- break关键字:如果在循环中使用,遇到了break,则 **立刻跳出当前所在的循环**
 
 ```javascript
 for (let i = 100; i <= 200; i++) {
@@ -78,7 +92,7 @@ for (let i = 100; i <= 200; i++) {
     }
 }
 ```
-- continue:在循环中如果遇到continue关键字**,直接开始下一次循环**
+- continue:在循环中如果遇到continue关键字 **直接开始下一次循环**
 
 ```javascript
 //求100-200之间所有的奇数之和
@@ -93,3 +107,29 @@ while (i <= 200) {
     i++;
 }
 ```
+
+
+
+#### 扩展运算符 - ...
+
+```js
+let modify = (...args) => {
+    console.log('args=', args); // 结果：args 是数组 [1, 2, 3, 4, 4]
+}
+modify(1,2,3,4,4);
+```
+
+```js
+let modify = (args) => {
+    console.log('args=', args); // 结果：args 是参数 1
+}
+modify(1,2,3,4,4);
+```
+
+```js
+let modify = function(){
+    console.log('arguments=', arguments); // 结果：arguments 是类数组 [1, 2, 3, 4, 4]
+}
+modify(1,2,3,4,4);
+```
+
