modify：函数柯里化补充

--- a/_posts/JS原生基础相关/2021-07-21-函数柯里化.md
+++ b/_posts/JS原生基础相关/2021-07-21-函数柯里化.md
@@ -38,7 +38,7 @@ typora-root-url: ..
 
 - 用途
 
-    **参数复用** - 本质上是降低通用性，提高适用性
+    1/3、**参数复用** - 本质上是降低通用性，提高适用性
 
     ```js
     // 示例1 - 多个不同域名下的请求
@@ -89,6 +89,47 @@ typora-root-url: ..
     hasNumber('testtest')   // false
     hasLetter('21212')      // false
     ```
+
+    2/3、**提前返回**
+
+    例如：兼容现代浏览器以及IE浏览器的事件添加方法 - 只进行一次判断
+
+    ```js
+    // 每次绑定事件的时候都要走一遍 if-else 的判断逻辑
+    var addEvent = function(el, type, fn, capture) {
+        if (window.addEventListener) {
+            el.addEventListener(type, function(e) {
+                fn.call(el, e);
+            }, capture);
+        } else if (window.attachEvent) {
+            el.attachEvent("on" + type, function(e) {
+                fn.call(el, e);
+            });
+        } 
+    };
+    
+    // 柯里化逻辑之后
+    // 先自执行一次，之后调用就不会需要再走 if-else 判断
+    var addEvent = (function(){
+        if (window.addEventListener) {
+            return function(el, sType, fn, capture) {
+                el.addEventListener(sType, function(e) {
+                    fn.call(el, e);
+                }, (capture));
+            };
+        } else if (window.attachEvent) {
+            return function(el, sType, fn, capture) {
+                el.attachEvent("on" + sType, function(e) {
+                    fn.call(el, e);
+                });
+            };
+        }
+    })();
+    ```
+
+    3/3、**延迟计算** - 和ES6 的 `bind` 方法一样，只返回函数体，不执行
+
+    
 
 - 柯里化函数实现
 
