--- a/_posts/JS原生基础相关/2020-03-30-解构赋值的深入理解.md
+++ b/_posts/JS原生基础相关/2020-03-30-解构赋值的深入理解.md
@@ -1,32 +1,36 @@
 ---
 layout:     post
-title:     工作 解构赋值的深入理解
+title:     解构赋值的深入理解
 subtitle:  
 date:       2020-03-30
 author:     
 header-img: 
 catalog: true
 tags:
-    - < 工作遇到的问题记录 >
+    - < JS原生基础相关 >
 typora-root-url: ..
 ---
 
 
-# 工作 解构赋值的深入理解
+# 解构赋值的深入理解
 
 场景：一个赋值语句看不懂，大概如下第二句。
 
-![image-20200331094142020](/img/assets_2019/image-20200331094142020.png)
+![image-20200331094142020](/../img/assets_2019/image-20200331094142020.png)
 
 参考：MDN的解构赋值
 
 总结：知识点只知道一部分是不够的，遇到问题好好处理，抓住每一次补基础的机会。
 
-> **解构赋值**语法是一种 Javascript 表达式。
 
-通过**解构赋值,** 可以将属性/值从对象/数组中取出,赋值给其他变量。
+
+> **解构赋值**语法是一种 Javascript 表达式
+
+通过 **解构赋值**，可以将 <u>属性/值</u> 从 <u>对象/数组</u> 中取出，赋值给其他变量。
 
 对象和数组逐个对应表达式，提供了一种简单的定义一个特定的数据组的方法。
+
+
 
 ```javascript
 // 1、
@@ -39,7 +43,7 @@ typora-root-url: ..
 
 > **着重分析这次的盲点**：
 
-解构赋值使用了相同的语法，不同的是在表达式**左边定义了要从原变量中取出什么变量**。
+解构赋值使用了相同的语法，不同的是在表达式 **左边定义了要从原变量中取出什么变量**。
 
 ```javascript
 var x = [1, 2, 3, 4, 5];
@@ -47,7 +51,9 @@ var [y, z] = x;
 // y=1,z=2
 ```
 
-> MDN中提到的妙用----**解构数组**
+
+
+#### MDN中提到的妙用----解构<span style="color:red">数组</span>
 
 1、默认值
 
@@ -91,7 +97,9 @@ var [a, , b] = f();// a=1,b=3
 var [a, ...b,] = [1, 2, 3];// SyntaxError
 ```
 
-> MDN中的妙用--**解构对象**
+
+
+#### MDN中的妙用--解构<span style="color:red">对象</span>
 
 1、无声明赋值
 
@@ -102,62 +110,66 @@ var a, b;
 
 `{a, b} = {a: 1, b: 2}` 不是有效的独立语法，因为左边的 `{a, b}` 被认为是一个块而不是对象字面量。然而，`({a, b} = {a: 1, b: 2})` 是有效的，正如 `var {a, b} = {a: 1, b: 2}`
 
-2、**解构嵌套**对象和数组
+2、**解构嵌套** 对象和数组
 
 ```javascript
 const metadata = {
-  title: 'Scratchpad',
-  translations: [
-    {
-      locale: 'de',
-      title: 'JavaScript-Umgebung'
-    }
-  ],
-  url: '/en-US/docs/Tools/Scratchpad'
+    title: '俊哲',
+    translations: [
+        {
+            locale: '果酱',
+            title: '栀子花'
+        }
+    ],
+    url: '世人皆爱有情人'
 };
 
 let {
-  title: englishTitle, // 重命名了
-  translations: [
-    {
-       title: localeTitle, // 重命名了
-    },
-  ],
+    title: gjxm,
+    translations: [
+        {
+            title: zzh,
+        },
+    ],
 } = metadata;
 
-console.log(englishTitle); // "Scratchpad"
-console.log(localeTitle);  // "JavaScript-Umgebung"
+console.log(gjxm); // 俊哲
+console.log(zzh);  // 栀子花
 ```
 
 3、**For of 迭代**和解构
 
 ```javascript
-var people = [{
-    name: 'Mike Smith',
-    family: {
-      mother: 'Jane Smith',
-      father: 'Harry Smith',
+var people = [
+    {
+        name: '浪浪钉',
+        family: {
+            mother: '栀子花',
+            father: '高级项目',
+        },
+        age: 35
     },
-    age: 35
-  },
-  {
-    name: 'Tom Jones',
-    family: {
-      mother: 'Norah Jones',
-      father: 'Richard Jones',
-    },
-    age: 25
-  }];
+    {
+        name: '四季山庄',
+        family: {
+            mother: '周子舒',
+            father: '温客行',
+        },
+        age: 25
+    }
+];
 
-for (var {name: n, family: {father: f}} of people) {
-  console.log('Name: ' + n + ', Father: ' + f);
+for (var {
+    name: n,
+    family: {
+        father: f
+    }
+} of people) {
+    console.log('name: ' + n + ', father: ' + f);
 }
-
-// "Name: Mike Smith, Father: Harry Smith"
-// "Name: Tom Jones, Father: Richard Jones"
 ```
 
-4、解构对象时会查找原型链（如果属性不在对象自身，将从原型链中查找）
+4、解构对象时会查找原型链（**如果属性不在对象自身，将从原型链中查找**）
 
 ```javascript
 // 声明对象 和 自身 self 属性
