--- a/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序、快排.md
+++ b/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序、快排.md
@@ -138,11 +138,11 @@ for(var i= 1;i<arr.length;i++){
 }
 ```
 
-#### 快速排序 对冒泡排序的一种改进
+### 快速排序 对冒泡排序的一种改进
 
 又称：划分交换排序
 
-**基本思想**：通过一趟排序将要排序的数据**分割成独立的两部分**，其中一部分的所有数据比另一部分的所有数据要小，再按这种方法对这两部分数据分别进行快速排序，整个排序过程可以递归进行，使整个数据变成有序序列。
+**基本思想**：通过一趟排序将要排序的数据 **分割成独立的两部分**，其中一部分的所有数据比另一部分的所有数据要小，再按这种方法对这两部分数据分别进行快速排序，整个排序过程可以递归进行，使整个数据变成有序序列。
 
 <img src="http://pic2.zhimg.com/v2-d4e5d0a778dba725091d8317e6bac939_b.webp"/>
 
