modify：跨页面通信

--- a/_posts/2021-06-29-跨页面通信.md
+++ b/_posts/2021-06-29-跨页面通信.md
@@ -66,12 +66,23 @@ ling.onmessage = function (e) {
 
 ### 3/6、LocalStorage
 
+localstorage 是浏览器 **多个标签共用** 的存储空间，所以可以用来实现多标签之间的通信 
+
+(ps：session 是会话级的存储空间，**每个标签页都是单独的**）
+
+```javascript
+window.onstorage = (e) => {console.log(e)}
+// 或者这样
+window.addEventListener('storage', (e) => console.log(e))
+```
+
 核心要点：
 
-- 当 `LocalStorage` 属性的值变化时，会触发 `storage` 事件
+- 特点1：`onstorage` 以及 `storage` 事件，针对都是 **非当前页面** 对 localStorage 进行修改时才会触发，当前页面修改 localStorage 不会触发监听函数
+- 特点2：在对原有的数据的值进行 **修改时才会触发**，比如原本已经有一个 key=a，value=b 的 localStorage，你再执行：`localStorage.setItem('a', 'b')`是不会触发监听函数的
 
 ```js
-// 监听 localstroage 的变化
+// 页面1-监听 localstroage 的变化
 window.addEventListener('storage', function (e) {
     if (e.key === 'junzhe') {
         const data = JSON.parse(e.newValue); 
@@ -81,7 +92,7 @@ window.addEventListener('storage', function (e) {
 ```
 
 ```js
-// 改变 LocalStorage -> 加 ts 是因为 storage 事件只在 值 真正改变时触发
+// 页面2-改变 LocalStorage -> 加 ts 是因为 storage 事件只在 值 真正改变时触发
 let ts = +new Date();
 let data = {
     message: '是真的',
@@ -92,20 +103,26 @@ localStorage.setItem('junzhe', JSON.stringify(data));
 
 ### 4/6、Shared Worker
 
+普通的 `webworker` 直接使用 `new Worker()` 即可创建，这种 webworker 是 **当前页面** 专有的。
+
+然后还有种共享 worker(`SharedWorker`)，这种是可以多个标签页、iframe共同使用的
+
 核心要点：
 
 - 多个 Tab 注册的 Shared Worker 可以实现数据共享
-- 无法主动通知所有页面，使用<span style="color:red">轮询</span>的方式拉取最新的数据
+- 无法主动通知所有页面，使用 <span style="color:red">轮询</span> 的方式拉取最新的数据
 
 【没有进行实践】
 
-#### 5/6、IndexedDB
+### 5/6、定时器 + IndexedDB/cookie - 轮询
 
 核心要点：
 
-- 消息发送方将消息存至 `IndexedDB` 中，接收方通过<span style="color:red">轮询</span>去获取最新的信息
+①在页面A设置一个使用 `setInterval` 定时器不断刷新，检查 `Cookies/IndexedDB` 的值是否发生变化，如果变化就进行刷新的操作
 
-#### 6/6、通过 window.open 实现
+②由于 `Cookies` 是在 <u>同域可读</u> 的，所以在页面 B 审核的时候改变 `Cookies` 的值，页面 A 自然是可以拿到的
+
+### 6/6、通过 window.open 实现
 
 核心要点：
 
@@ -122,4 +139,6 @@ localStorage.setItem('junzhe', JSON.stringify(data));
 核心要点：
 
 - 由于 `iframe` 与父页面间可以通过指定 `origin` 来忽略同源限制，因此可以在每个页面中嵌入同一个 `iframe` —> 这些 iframe 由于使用的是一个 url，因此属于同源页面，其通信方式可以复用上面第一部分提到的各种方式
+
+
 
