--- a/_posts/2019-07-08-面试题整理 .md
+++ b/_posts/2019-07-08-面试题整理 .md
@@ -151,7 +151,7 @@ jsonp({
 //上面这段代码相当于向http://localhost:3000/say?wd=Iloveyou&callback=show这个地址请求数据，然后后台返回show('我不爱你')，最后会运行show()这个函数，打印出'我不爱你'
 ```
 
-②**CORS**
+②**CORS** - 跨域资源共享
 
 浏览器会自动进行 CORS 通信，实现 CORS 通信的关键是后端。只要后端实现了 CORS，就实现了跨域。
 
@@ -1539,7 +1539,6 @@ setTimeout(() => {
 
 100. three.js学得怎么样
 
-101. 学习有关正则表达式的API，例如exec、test
 
 
 
