--- a/_posts/vue相关内容/2019-07-12-vue相关 面试问题.md
+++ b/_posts/vue相关内容/2019-07-12-vue相关 面试问题.md
@@ -171,7 +171,7 @@ Object.freeze()方法有三个特点：
    }
    export default new Vuex.Store({state,mutations})
 ```
-2.兄弟组件互相传值，引入bus.js文件，发布者订阅者模式：
+2.兄弟组件互相传值，引入bus.js文件，发布订阅模式：
 
 ```javascript
 import Bus from './bus.js'
@@ -179,14 +179,14 @@ import Bus from './bus.js'
 ```javascript
 //一个子组件触发
 methods:{
-  Bus.$emit('触发的方法名'，需要传递的值);
+    Bus.$emit('触发的方法名'，需要传递的值);
 }
 ```
 ```javascript
 //一个子组件监听
-   mounted:{
-       bus.$on("方法名",(传递的值)=>{ })
-   }
+mounted:{
+    bus.$on("方法名",(传递的值)=>{ })
+}
 ```
 3.兄弟组件互相传值`$root`
 
@@ -360,7 +360,7 @@ new Vue({
 
 写在一个页面上的话，需要判断本地是否已经有这个数据了
 
-![1567605439082](/img/assets_2019/1567605439082.png)
+![1567605439082](/../img/assets_2019/1567605439082.png)
 
 在src--store--index.js中声明state、mutations
 
