--- a/_posts/《红宝书相关博客》/2019-06-04-第一章-第三章 简介、基本概念 小结.md
+++ b/_posts/《红宝书相关博客》/2019-06-04-第一章-第三章 简介、基本概念 小结.md
@@ -27,7 +27,7 @@ typora-root-url: ..
 
 # 第二章 在HTML中使用JavaScript 小结
 
-​    把`JavaScript`插入到`HTML`页面中要使用`<script>`元素。使用这个元素可以把`JavaScript`嵌入到`HTML`u页面中，让脚本与标记混合在一起；也可以包含外部的`JavaScript`文件。
+​    把`JavaScript`插入到`HTML`页面中要使用`<script>`元素。使用这个元素可以把`JavaScript`嵌入到`HTML`页面中，让脚本与标记混合在一起；也可以包含外部的`JavaScript`文件。
 
 而我们需要注意的地方有：
 
@@ -41,7 +41,7 @@ typora-root-url: ..
 
 # 第三章 基本概念 小结
 
-​    `JavaScript`的核心语言特性在`ECMA-262`中是以名为`ECMAScript`的伪语言的形式来定义的。`ECMAScropt`中包含了所有基本的语法、操作符、数据类型以及完成基本的计算任务所必须的对象，但没有对取得输入和产生输出的机制作出规定。理解`ECMAScropt`及其纷繁复杂的各种细节，是理解其在`Web`浏览器中的实现----`JavaScript`的关键。目前大多数实现所遵循的都是`ECMA-262`第3版，但很多也已经着手开始实现第5版了。
+​    `JavaScript`的核心语言特性在`ECMA-262`中是以名为`ECMAScript`的伪语言的形式来定义的。`ECMAScript`中包含了所有基本的语法、操作符、数据类型以及完成基本的计算任务所必须的对象，但没有对取得输入和产生输出的机制作出规定。理解`ECMAScript`及其纷繁复杂的各种细节，是理解其在`Web`浏览器中的实现----`JavaScript`的关键。目前大多数实现所遵循的都是`ECMA-262`第3版，但很多也已经着手开始实现第5版了。
 
 ​    以下简要总结了`ECMAScript`中基本的要素。
 
