--- a/_posts/《红宝书相关博客》/2019-06-07-第六章 面向对象的程序设计 小结 .md
+++ b/_posts/《红宝书相关博客》/2019-06-07-第六章 面向对象的程序设计 小结 .md
@@ -13,7 +13,9 @@ typora-root-url: ..
 
 
 
-    `ECMAScript`支持面向对象(OO)编程，但不使用类或者接口。对象可以在代码执行过程中创建和增强，因此具有动态性而非严格定义的实体。
+```js
+`ECMAScript`支持面向对象(OO)编程，但不使用类或者接口。对象可以在代码执行过程中创建和增强，因此具有动态性而非严格定义的实体。
+```
 
 ### 在没有类的情况下，可以采用下列模式创建对象：
 
@@ -23,19 +25,12 @@ typora-root-url: ..
 
 3. 原型模式，使用构造函数的`prototype`属性来指定那些应该共享的属性和方法。组合使用构造函数模式和原型模式时，使用构造函数定义实例对象，而使用原型定义共享的属性和方法。
 
-   
 
 `JavaScript`主要**通过原型链实现继承**。原型链的构建是通过将一个类型的实例赋值给另一个构造函数的原型实现的。这样，子类型就能够访问超类型的所有属性和方法，这一点与基于类的继承很相似。
 
-
-
 **原型链的问题是对象实例共享所有继承的属性和方法，因此不适宜单独使用。**
 
-
-
-解决这个问题的技术是借用构造函数，即在子类型构造函数的内部调用超类型构造函数。这样就可以做到每个实例都具有自己的属性，同时还能保证只使用构造函数模式来定义类型。使用最多的继承模式是**组合继承**，这种模式**使用原型链继承共享的属性和方法，而通过借用构造函数继承实力属性**。
-
-
+- 解决这个问题的技术是借用构造函数，即在子类型构造函数的内部调用超类型构造函数。这样就可以做到每个实例都具有自己的属性，同时还能保证只使用构造函数模式来定义类型。使用最多的继承模式是**组合继承**，这种模式**使用原型链继承共享的属性和方法，而通过借用构造函数继承实力属性**。
 
 此外，还存在下列可供选择的**继承模式**。
 
