--- a/_posts/《红宝书相关博客》/2019-06-08-第七章 函数表达式 小结.md
+++ b/_posts/《红宝书相关博客》/2019-06-08-第七章 函数表达式 小结.md
@@ -14,7 +14,8 @@ typora-root-url: ..
 
 
 ​    在`JavaScript`编程中，函数表达式是一种非常有用的技术。使用函数表达式可以无须对函数命名，从而实现动态编程。
-​    匿名函数，也成为**拉姆达函数**，是一种使用`JavaScript`函数的强大方式。
+
+​    匿名函数，也成为 **拉姆达函数**，是一种使用`JavaScript`函数的强大方式。
 
 ### 以下总结了函数表达式的特点：
 
@@ -22,8 +23,9 @@ typora-root-url: ..
 
 2. 在无法确定如何引用函数的情况下，递归函数就会变得比较复杂；
 
-3. 递归函数应该式中**使用`arguments.callee`来递归地调用自身**，不要使用函数名--函数名可能会发生变化。
-  当在函数内部定义了其他函数时，就创建了**闭包**。闭包有权访问包含函数内部的所有变量，原理如下：
+3. 递归函数应该式中 **使用`arguments.callee`来递归地调用自身** ，不要使用函数名--函数名可能会发生变化。
+    
+    当在函数内部定义了其他函数时，就创建了**闭包**。闭包有权访问包含外部函数内部的所有变量，原理如下：
 
   - 在后台执行环境中，**闭包的作用域链**包含着它自己的作用域、包含函数的作用域和全局作用域。
 
