--- a/_posts/浏览器原理相关内容/2021-04-11-13 V8如何解析js代码 - 编译器+解析器.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-13 V8如何解析js代码 - 编译器+解析器.md
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 
 
-# 13 V8如何解析js代码 - 编译器+解析器
+# 13 V8如何解析js代码 - 编译器+解释器
 
 ### 1、语言类型分类
 解释型语言 -- js、python等，每次都需要 **解释器** 对程序进行动态解释和执行
@@ -39,7 +39,9 @@ typora-root-url: ..
 #### 3/4、生成字节码 - 解释器 Ignition 
 
 补充：字节码就是介于 AST 和机器码之间的一种代码。
+
 **使用字节码可以减少系统的内存使用**，如下图。
+
 与特定类型的机器码无关，字节码需要通过 **解释器** 将其转换为机器码后才能执行。
 
 <img src="/../img/assets_2019/image-20210411201742032.png" alt="image-20210411201742032" style="zoom:40%;" />
