--- a/_posts/浏览器原理相关内容/2021-04-12-14 消息队列和事件循环.md
+++ b/_posts/浏览器原理相关内容/2021-04-12-14 消息队列和事件循环.md
@@ -20,8 +20,8 @@ typora-root-url: ..
 <img src="/../img/assets_2019/image-20210412205416115.png" alt="image-20210412205416115" style="zoom:40%;" />
 
 #### 消息队列中的任务类型
--   内部消息类型，如`输入事件`（鼠标滚动、点击、移动）、`微任务`、文件`读写`、`WebSocket`、JavaScript `定时器`等；
--   还包含了很多与页面相关的事件，如 JavaScript 执行、解析 `DOM`、`样式`计算、`布局`计算、CSS `动画`等
+-   内部消息类型，如输入事件（鼠标滚动、点击、移动）、微任务、文件读写、WebSocket、JavaScript定时器等；
+-   还包含了很多与页面相关的事件，如 JavaScript 执行、解析 DOM、样式计算、布局计算、CSS动画等
 
 —> 要让这么多不同类型的任务在 **渲染进程的主线程** 中有条不紊地执行，这就需要一个系统来统筹调度这些任务，这个 **统筹调度系统** 就是我们今天要讲的 <u>消息队列和事件循环系统</u>
 
