--- a/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
@@ -27,13 +27,13 @@ typora-root-url: ..
 -   可执行代码
 ### 创建执行上下文（Execution context）
 
-    执行上下文是JavaScript执行一段代码时的运行环境。
+定义：执行上下文是JavaScript执行一段代码时的运行环境。
 
 对于每个执行上下文，都有三个重要属性：
 
 1、**this**
 
-2、建立 **作用域链** (Scope chain) - **词法环境**：当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(词法层面上的父级)执行上下文的变量对象中查找，一直找到全局上下文的变量对象，也就是全局对象。这样由多个执行上下文的变量对象构成的链表就叫做作用域链
+2、建立 **作用域链** (Scope chain) - **词法环境**：当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(词法层面上的父级)执行上下文的变量对象中查找，一直找到全局上下文的变量对象，也就是全局对象。这样 **由多个执行上下文的变量对象构成的链表** 就叫做作用域链
 
 3、生成 **变量对象** (Variable object，VO) - 保存了**变量提升**的内容
 
