--- a/_posts/浏览器原理相关内容/2021-04-09-05-2 html+js+css是如何解析渲染的.md
+++ b/_posts/浏览器原理相关内容/2021-04-09-05-2 html+js+css是如何解析渲染的.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:     21 html+js+css是如何解析渲染的
+title:     05-2 html+js+css是如何解析渲染的
 subtitle:  
-date:       2021-04-14
+date:       2021-04-09
 author:     
 header-img: 
 catalog: true
@@ -12,9 +12,9 @@ typora-root-url: ..
 ---
 
 
-# 21 html+js+css是如何解析渲染的
+# 05-2 html+js+css是如何解析渲染的
 
-###  CSS 是如何工作的
+###  CSS 是如何工作的 - 按照js是否存在/引入方式不同
 #### 1/3、html + css 文件的渲染流程分析
 先看下面的一个示例代码
 
@@ -28,11 +28,11 @@ typora-root-url: ..
 
 1、渲染进程/浏览器进程，发起的主页面请求被送到 **网络进程** 中去执行
 
-2、网络进程请求到 `HTML` 数据后，将其发送给 **渲染进程**，然后渲染进程会解析 `HTML` 并构建 `DOM`，注意请求 `HTML` 数据和构建 `DOM` 中间有一段**【空闲时间】**
+2、网络进程请求到 `HTML` 数据后，将其发送给 **渲染进程**，然后渲染进程会解析 `HTML` 并构建 `DOM`，注意请求 `HTML` 数据和构建 `DOM` 中间有一段**<u>【空闲时间】</u>**
 
 3、当渲染进程接收 `HTML` 文件字节流时，会先开启一个<span style="color:red">**预解析线程**</span>，如果遇到 `JS` 文件或者 `CSS` 文件，那么预解析线程会 **提前下载** 这些数据
 
-4、在 `DOM` 构建结束之后、**css 文件还未下载完成** 的这段时间内，渲染流水线无事可做 -- **【空闲时间】**，因为下一步要合成布局树，需要 `CSSOM` 和 `DOM`，所以需要等 `CSS` 下载完毕并解析成 `CSSOM`
+4、在 `DOM` 构建结束之后、**css 文件还未下载完成** 的这段时间内，渲染流水线无事可做 -- **<u>【空闲时间】</u>**，因为下一步要合成布局树，需要 `CSSOM` 和 `DOM`，所以需要等 `CSS` 下载完毕并解析成 `CSSOM`
 
 5、等 `DOM` 和 `CSSOM` 都构建好之后，渲染引擎就会<span style="color:red"> **构造布局树**</span> -- 布局树的结构基本上就是复制 DOM 树的结构，不同之处在于 DOM 树中那些 **不需要显示的元素会被过滤掉**，如 `display:none` 属性的元素、`head` 标签、`script` 标签等
 
@@ -47,7 +47,7 @@ typora-root-url: ..
 
 1、解析 `DOM` 的过程中，如果遇到了 `JS` 脚本，那么需要先 **暂停 DOM 解析去执行 JS**，因为 `JS` 有可能会修改当前状态下的 `DOM`
 
-2、但是在执行 JS 脚本之前，如果页面中包含了 **外部 CSS 文件的引用/`style`标签** 内置了 css 内容 -- 渲染引擎需要**先将这些内容转换为 `CSSOM`**，因为 JS 有修改 css 的能力 —>  css 在部分情况下也会阻塞 DOM 的生成
+2、但是在执行 JS 脚本之前，如果页面中包含了 **外部 CSS 文件的引用/`style`标签** 内置了 css 内容 -- 渲染引擎需要**先将这些内容转换为 `CSSOM`**，因为 JS 有修改 css 的能力 —>  所以我们常说：css 在部分情况下也会阻塞 DOM 的生成
 
 #### 3/3、html + css + 引入js文件 的渲染流程分析
 <img src="/../img/assets_2019/image-20210414222424403.png" alt="image-20210414222424403" style="zoom:40%;" />
