--- a/_posts/浏览器原理相关内容/2021-04-09-05-4 回流重绘+分层合成机制.md
+++ b/_posts/浏览器原理相关内容/2021-04-09-05-4 回流重绘+分层合成机制.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:     22 回流/重绘+分层合成机制
+title:     05-4 回流/重绘+分层合成机制
 subtitle:  
-date:       2021-04-14
+date:       2021-04-09
 author:     
 header-img: 
 catalog: true
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 
 
-# 22 回流/重绘+分层合成机制
+# 05-4 回流/重绘+分层合成机制
 
 配合博文一起看：05 渲染流程：HTML、CSS和JavaScript是如何变成页面的
 
@@ -57,7 +57,7 @@ typora-root-url: ..
 
 <img src="/../img/assets_2019/image-20210709115011262.png" alt="image-20210709115011262" style="zoom:25%;" />
 
-`Schedule Style Recalculation`（样式计算） -> `Recalculate Style`（样式计算） -> `Update Layer Tree`（回流） -> `Paint`（重绘） -> `Composite Layers`（渲染层合并）
+`Schedule Style Recalculation`（样式计算） -> `Recalculate Style`（样式计算） -> `Update Layer Tree`（回流/重排） -> `Paint`（重绘） -> `Composite Layers`（渲染层合并）
 
 - 1、JS 实现动画效果
 
@@ -67,7 +67,7 @@ typora-root-url: ..
 
     确定每个 DOM 元素应该应用什么 CSS 规则
 
-- 3、Layout <span style="color:red">**回流 reflow**</span>  - `Update Layer Tree` 
+- 3、Layout <span style="color:red">**回流/重排 reflow**</span>  - `Update Layer Tree` 
 
     - **定义**：根据 `CSSOM` + `DOM` 计算每个 DOM 元素在最终屏幕上显示的大小和位置 -  即 <span style="color:red">**计算布局**</span> --> 整个渲染流水线（从 html 开始递归往下计算尺寸和位置开始）的每个阶段都要执行一遍；
 
@@ -104,8 +104,8 @@ typora-root-url: ..
 
 关于 `display:none` 和 `visibility:hidden`：
 
-- `display：none` 指的是元素完全不陈列出来，**不占据空间**，涉及到了DOM结构，故产生 `回流+重绘`
-- `visibility：hidden` 指的是元素**不可见但存在**，保留空间，不影响结构，故只产生 `重绘`
+- `display：none` 指的是元素完全不陈列出来，**不占据空间**，涉及到了DOM结构，故产生 **回流+重绘**
+- `visibility：hidden` 指的是元素**不可见但存在**，保留空间，不影响结构，故只产生 **重绘**
 
 ##### 减少重排次数的几种方法：
 
