--- a/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序、快排.md
+++ b/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序、快排.md
@@ -38,33 +38,34 @@ typora-root-url: ..
 
 ```javascript
 var arr = [1, 9, 5, 2, 10, 3, 6, 4];// 待排序数组
-        for (var i = 0; i < arr.length - 1; i++) {
-            for (var j = i + 1; j < arr.length; j++) {
-                if (arr[i] > arr[j]) {
-                    var temp = arr[j];
-                    arr[j] = arr[i];
-                    arr[i] = temp;
-                }
-            }
+for (var i = 0; i < arr.length - 1; i++) {
+    for (var j = i + 1; j < arr.length; j++) {
+        if (arr[i] > arr[j]) {
+            var temp = arr[j];
+            arr[j] = arr[i];
+            arr[i] = temp;
         }
+    }
+}
 ```
 2.从后往前  先通过循环确定最后一位的最大值，然后继续往前确定数值。
 
 ```javascript
 var arr = [1, 9, 5, 2, 10, 3, 6, 4];// 待排序数组
-        for(var i= 0;i<arr.length-1;i++){
-            for(var j=0;j<arr.length-1-i;j++){
-                if (arr[j] > arr[j+1]) {
-                    var temp = arr[j];
-                    arr[j] = arr[j+1];
-                    arr[j+1] = temp;
-                }
-            }
+for(var i = 0;i < arr.length - 1; i++){
+    for(var j = 0;j < arr.length - 1 - i; j++){
+        if (arr[j] > arr[j+1]) {
+            var temp = arr[j];
+            arr[j] = arr[j+1];
+            arr[j+1] = temp;
         }
+    }
+}
 ```
 3.优化冒泡：设置一个标志位，减少不必要的循环
 
 当原数组是，`arr = [1,2,4,3];`在经过第一轮冒泡排序之后，数组就变成了`arr = [1,2,3,4];`
+
 此时，数组已经排序完成了，但是按上面的代码来看，数组还会继续排序，所以我们加一个标志位，如果某次循环完后，没有任何两数进行交换，就将标志位 设置为 true，表示排序完成，这样我们就可以减少不必要的排序，提高性能。
 
 ```javascript
@@ -108,13 +109,13 @@ bubbleSort(arr);
 var arr = [89, 56, 100, 21, 87, 45, 1, 88]; // 待排序数组
 // 按照从小到大的顺序排列
 // 外面这层循环是里层循环的次数
-for(var i= 1;i<arr.length;i++){
+for(var i= 1; i < arr.length; i++){
   	// --j 表示从数组第i位逐个向前遍历比大小
-    for(var j=i;j>0;--j){
+    for(var j = i; j > 0; --j){
       	// 如果当前位小于前一位，则交换 --> 小的在前 --> 排序方式位：小->大
-        if(arr[j-1]>arr[j]){
+        if(arr[j-1] > arr[j]){
           	// 利用es6的变量交换：[a,b]=[b,a]
-          	[arr[j-1],arr[j]]=[arr[j],arr[j-1]];
+          	[arr[j-1], arr[j]]=[arr[j], arr[j-1]];
         }
     }
 }
