--- a/_posts/浏览器原理相关内容/2021-04-09-05-3 白屏优化 - 首次加载.md
+++ b/_posts/浏览器原理相关内容/2021-04-09-05-3 白屏优化 - 首次加载.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:     21-2 白屏优化？
+title:     05-3 白屏优化？
 subtitle:  
-date:       2021-04-14
+date:       2021-04-09
 author:     
 header-img: 
 catalog: true
@@ -11,9 +11,9 @@ tags:
 typora-root-url: ..
 ---
 
-# 21-2 白屏优化？
+# 05-3 白屏优化？
 
-注意：这里直接给出方案，具体白屏过程解析请看上一篇博文【21 CSS如何影响首次加载时的白屏时间？】
+注意：这里直接给出方案，具体白屏过程解析请看上一篇博文
 
 - 白屏定义放一下：
 
@@ -23,7 +23,7 @@ typora-root-url: ..
 
 #### 1. DNS解析优化
 
-针对DNS `Lookup` 环节，我们可以针对性的进行 `DNS` 解析优化。
+针对DNS `Lookup` 环节，我们可以针对性的进行 `DNS` 解析优化
 
 - DNS **缓存优化**
 - DNS **预加载**策略
@@ -35,7 +35,7 @@ typora-root-url: ..
 
 #### 3. 服务端处理优化
 
-服务端的处理优化，是一个非常庞大的话题，会涉及到如[Redis](https://cloud.tencent.com/product/crs?from=10680)缓存、数据库存储优化或是系统内的各种中间件以及Gzip压缩等...
+服务端的处理优化，是一个非常庞大的话题，会涉及到如Redis缓存、数据库存储优化或是系统内的各种中间件以及Gzip压缩等...
 
 #### 4. 浏览器下载、解析、渲染页面优化
 
@@ -43,12 +43,12 @@ typora-root-url: ..
 
 - 尽可能的精简 `HTML` 的代码和结构（`HTML` 层级不要太深）
 - 还可以尽量 **减少文件大小**，比如通过 `webpack` 等工具移除一些不必要的注释，并压缩 `JavaScript` 文件
-- 尽可能的 **优化CSS文件和结构**（选择器是从右向左解析，所以尽可能减少层级）
+- 尽可能的 **优化CSS文件和结构**（**选择器是从右向左解析**，所以尽可能减少层级）
     - 用 `link` 别用 `@import`（`@import` 是延迟加载，遇到了代码才加载，预解析的时候不能和 js 文件并发加载）
     - 对于大的 `CSS` 文件，可以通过**媒体查询属性**，将其拆分为多个不同用途的 CSS 文件，这样只有在特定的场景下才会加载特定的 CSS 文件
 - 一定要 **合理的放置JS代码，尽量不要使用内联的 JS 代码**
     - 没有 `defer` 和 `async` 标签的 `script` 会立即加载并执行 - js 执行阻断 html 解析
-    - 有 `async` 标签的 js - js 的加载和 html 的解析和渲染并行
+    - 有 `async` 标签的 js - js 的加载和 html 的解析和渲染并行，加载完即执行
     - 有 `defer` 标签的 js - js的加载和 html 的解析和渲染并行，但会在 html 解析完成后执行，在触
         发 `DOMContentLoaded` 事件前执行
 - 减少 HTTP 请求次数和请求大小
