add：按值/址传值

--- a/_posts/JS原生基础相关/2019-06-18-函数及作用域链.md
+++ b/_posts/JS原生基础相关/2019-06-18-函数及作用域链.md
@@ -13,49 +13,78 @@ typora-root-url: ..
 
 ###  函数
 
-- 函数:把一些重复的代码封装,在需要的时候直接调用即可；
+定义：把一些重复的代码封装，在需要的时候直接调用即可
 
-- 函数的作用:代码的重用；
+作用：代码的重用
 
-- 函数的定义：两种方式 **函数声明和函数表达式**；
-  **两者区别：**
-  1.函数声明在预解析的时候会**提前声明**
-  2.函数表达式在预解析的时候不会提前
-  3.函数表达式要加分号
+定义方式：两种方式 **函数声明和函数表达式**；
 
 ```javascript
 // 函数声明
 function funcname(){
-    // 函数体
-    console.log('愿得一人心');
+    console.log('俊哲');
 }
-// 函数表达式
-var funcname= function(){
-    console.log('白首不相离');
+// 函数表达式 - 推荐使用
+var funcname = function(){
+    console.log('是真的');
 };  
-
-//推荐使用：函数表达式
 ```
-- 函数的调用：两种方式 **函数名调用和函数自调用**
+- **函数声明VS函数表达式 - 两者区别：**
+
+    1、函数声明在预解析的时候会 **提前声明**
+
+    2、函数表达式在预解析的时候不会提前
+
+    3、函数表达式要加分号
+
+调用方式：两种方式 **函数名调用和函数自调用**
 
 ```javascript
-// 调用方式： 函数名();
+// 函数名调用
 funcname();
-// 调用方式： 函数的自调用，（函数代码）();
+// 函数自调用
 (function(){
-    console.log('阿德勒《超越自卑》');
+    console.log('渔粉');
 })();
 ```
 **注意事项**：
 
-+ 函数名字：要遵循**驼峰命名法**，函数名字指向的是函数的代码。
-+ 函数一旦重名，后面定义的会把前面的**覆盖**。
-+ **形参**：函数在定义时的变量叫形参，不需要写var。
-+ **实参**：函数在调用时传入的值叫实参，实参可以是变量也可以是值。
-+ 函数没有返回值，但是在调用的时候接收了，那么结果就是`undefined`。
-+ **形参的个数和实参的个数可以不一致**，没有传入实参的参数是`undefined`。
-+ 函数是可以作为返回值赋值使用的，用return返回的函数，没有调用就不会执行。
-+ 函数可以作为参数使用,如果一个函数作为参数,那么我们说这个参数(函数)可以叫**回调函数**。
++ 函数名字：要遵循**驼峰命名法**，函数名字指向的是函数的代码
+
++ 函数一旦 **重名**，后面定义的会把前面的**覆盖**
+
++ **形参**：函数在定义时的变量叫形参，不需要写var
+
+    **实参**：函数在调用时传入的值叫实参，实参可以是变量也可以是值
+
+    **形参的个数和实参的个数可以不一致**，没有传入实参的参数是 `undefined`
+
++ 函数没有返回值，但是在调用的时候接收了，那么结果就是  `undefined`
+
++ 函数是可以作为 **返回值** 赋值使用的，用 return 返回的函数，没有调用就不会执行
+
++ 函数可以作为参数使用，如果一个函数作为参数，那么我们说这个参数(函数)可以叫**回调函数**。
+
+
+
+拼多多编程题：
+
+<img src="/../img/assets_2019/image-20210810143107273.png" alt="image-20210810143107273" style="zoom:30%;" />
+
+考点：
+
+参数在传递给函数时，会将参数拷贝一份传递给函数（**按值传递**） -> 只有 <u>对象</u>，被拷贝的是一块内存地址（**按址传递**）
+
+```js
+objTemp.a = 1; // objTemp 先改变了和 obj 共同指向的对象 -> {a:1}
+objTemp = { b: 2 }; // objTemp指向了另一个地址的对象
+```
+
+浏览器输出结果：
+
+![image-20210810145410092](/../img/assets_2019/image-20210810145410092.png)
+
+
 
 ###  作用域
 
