add：事件循环考题

--- a/_posts/浏览器原理相关内容/2021-04-14-19 async await使用同步方式写异步代码.md
+++ b/_posts/浏览器原理相关内容/2021-04-14-19 async await使用同步方式写异步代码.md
@@ -16,6 +16,10 @@ typora-root-url: ..
 
 Promise 的缺点：处理流程复杂时，代码充斥了`.then`方法，语义化不明显
 
+`async/await` ：底层转换成了 `Promise` 和 `then` 回调函数 —> **每次我们使用 `await`, 解释器都创建一个 promise 对象，然后把剩下的 `async` 函数中的操作放到 then 回调函数中**。
+
+
+
 ###  JS 异步编程的重大改进 - async await
 async await - 提供了在不阻塞主线程的情况下 <span style="color:red">**使用同步代码实现异步访问资源**</span> 的能力，并且使得代码逻辑更加清晰
 
@@ -24,6 +28,18 @@ async await - 提供了在不阻塞主线程的情况下 <span style="color:red"
 需要注意的就是 **await是强制把异步变成了同步，这一句代码执行完，才会执行下一句**。
 
 <img src="/../img/assets_2019/1572012187509.png" alt="1572012187509" style="zoom:63%;" />
+
+在 **async** 函数内部可以使用 **await** 命令，表示等待一个异步函数的返回。await 后面跟着的是一个 Promise 对象，如果不是的话，系统会调用 `Promise.resolve()` 方法，将其转为一个 resolve 的 **Promise** 的对象。
+
+```javascript
+let bar = async function(){  
+	try{    
+        await Promise.reject('error')
+    }catch(e){    
+        console.log(e)
+    }
+}
+```
 
 
 
