--- a/_posts/浏览器原理相关内容/2021-04-12-14 任务调度系统.md
+++ b/_posts/浏览器原理相关内容/2021-04-12-14 任务调度系统.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     14 消息队列和事件循环
+title:     14 任务调度系统
 subtitle:  
 date:       2021-04-12
 author:     
@@ -11,8 +11,9 @@ tags:
 typora-root-url: ..
 ---
 
+# 14  任务调度系统
 
-# 14 消息队列和事件循环 — 任务调度系统
+任务调度系统 - 组成：消息队列 + 事件循环
 
 ## 为什么渲染主线程需要任务调度系统？
 可以看如下图的任务，除了线程之间的相互通信，还有跨进程发送的任务
