--- a/_posts/css相关内容/2019-07-07-css中的动画特性可以用js实现，那为什么还要用css来实现？.md
+++ b/_posts/css相关内容/2019-07-07-css中的动画特性可以用js实现，那为什么还要用css来实现？.md
@@ -21,11 +21,11 @@ typora-root-url: ..
 
 ​	**在需要对动画进行大量控制时，使用 JavaScript**。 Web Animations API 是一个基于标准的方法，现已在 Chrome 和 Opera 中提供。该方法可提供实际对象，非常适合复杂的对象导向型应用。在需要停止、暂停、减速或倒退时，JavaScript 也非常有用。
 
-**那么如何从两者中抉择？**
+#### 那么如何从两者中抉择？
 
 ​	根据 Google Developer，**渲染线程分为 主线程 (main thread) 和 合成线程 (compositor thread)**。如果 CSS 动画**只是改变` transforms` 和` opacity`，这时整个 CSS 动画得以在 合成线程 完成（而JS动画则会在 主线程 执行**，然后触发合成线程进行下一步操作），在 JS 执行一些昂贵的任务时，主线程繁忙，CSS 动画由于使用了合成线程可以保持流畅。
 
-​	在许多情况下，也可以由合成线程来处理 transforms 和 opacity 属性值的更改。
+​	在许多情况下，也可以由合成线程来处理 `transforms` 和 `opacity` 属性值的更改。
 
 ​	对于帧速表现不好的低版本浏览器，**CSS3可以做到自然降级，而JS则需要撰写额外代码**。
 
