--- a/_posts/css相关内容/2019-10-26-左边固定，右边自适应.md
+++ b/_posts/css相关内容/2019-10-26-左边固定，右边自适应.md
@@ -18,13 +18,13 @@ typora-root-url: ..
 
 
 
-常用的**宽度自适应的方法思路：**
+常用的 **宽度自适应的方法思路：**
 
 1、通常是利用了block水平的元素宽度能随父容器调节的流动特性
 
-2、另外一种思路是利用CSS中的calc()方法来动态设定宽度
+2、另外一种思路是利用CSS中的 `calc()` 方法来动态设定宽度
 
-3、还有一种思路是利用CSS3中的新型布局flex layout与grid layout。
+3、还有一种思路是利用CSS3中的新型布局 flex layout 与 grid layout。
 
 
 
@@ -72,7 +72,7 @@ typora-root-url: ..
 
 #### ②固定区采用绝对定位，自适应区设置margin-left:左侧固定宽度
 
-**缺点**:使用了绝对定位，若是用在某个div中，需要更改父容器的position；没有清除浮动的方法，若左侧盒子高于右侧盒子，就会超出父容器的高度（绝对定位后脱标），因此只能通过设置父容器的min-height来放置这种情况。
+**缺点**：使用了绝对定位，若是用在某个div中，需要更改父容器的position；没有清除浮动的方法，若左侧盒子高于右侧盒子，就会超出父容器的高度（绝对定位后脱标），因此只能通过设置父容器的min-height来放置这种情况。
 
 ```css
 /* 解决：给左边绝对定位，脱离文档流，不占位置，给右侧外边距即可 */
