--- a/_posts/css相关内容/2020-03-18-安卓字体上浮.md
+++ b/_posts/css相关内容/2020-03-18-安卓字体上浮.md
@@ -42,7 +42,7 @@ typora-root-url: ..
 
 #### css能起作用么？
 
-在这种情况下，css能做些什么呢？我们熟悉的几个属性：`height`、`margin`、`padding`、`border`、`line-height`、`vertical-align`?
+在这种情况下，css能做些什么呢？我们熟悉的几个属性：`height`、`margin`、`padding`、`border`、`line-height`、`vertical-align`
 
 先解释几个简单的：
 
