--- a/_posts/浏览器原理相关内容/2021-04-09-05-4 回流重绘+分层合成机制.md
+++ b/_posts/浏览器原理相关内容/2021-04-09-05-4 回流重绘+分层合成机制.md
@@ -116,7 +116,7 @@ typora-root-url: ..
     - 创建新的 DOM 节点，操作完之后再添加到页面
     - 复制节点，操作完之后替换原节点
 - 4、脱离文档流（`fixed`/`absolute`） - 利用分层，只有当前层需要重排，代价开销小
-- 5、优化动画 - 利用 GPU 加速：Canvas2D，布局合成, CSS3转换（transitions），CSS3 3D变换（transforms），WebGL和视频(video)。**使用css3硬件加速，可以让transform、opacity、filters这些动画不会引起回流重绘 。但是对于动画的其它属性，比如background-color这些，还是会引起回流重绘的，不过它还是可以提升这些动画的性能**
+- 5、优化动画 - 利用 GPU 加速：Canvas2D，布局合成, CSS3转换（transitions），CSS3 3D变换（transforms），WebGL和视频(video)。**使用css3硬件加速，可以让transform、opacity、filters、will-change 这些动画不会引起回流重绘 。但是对于动画的其它属性，比如background-color这些，还是会引起回流重绘的，不过它还是可以提升这些动画的性能**
 
 #### 分层和合成流程
 
