--- a/_posts/算法、刷题/2019-09-01-秋招 剑指offer刷题.md
+++ b/_posts/算法、刷题/2019-09-01-秋招 剑指offer刷题.md
@@ -120,3 +120,4 @@ str = str.split(/(?=[A-Z])/g).reduce((acc, val, idx) => idx === 0 ?
 console.log(str);//str-arr-test
 ```
 
+补充：`/(?=[A-Z])/` 表示断言，只匹配一个位置
