modify：左边固定，右边自适应总结

--- a/_posts/css相关内容/2019-10-26-左边固定，右边自适应.md
+++ b/_posts/css相关内容/2019-10-26-左边固定，右边自适应.md
@@ -14,7 +14,17 @@ typora-root-url: ..
 
 # 左边固定，右边自适应的布局
 
-简单说有：float方法，BFC方法，flex布局与grid布局。
+简单说有：
+
+​	float方法（左浮动，右margin-left）；
+
+​	绝对定位（左绝对，右margin-left）；
+
+​	BFC方法（左浮动，右overflow:auto形成BFC，不与float盒子重叠）；
+
+​	flex布局（flex:0 0 200px）；
+
+​	table/grid布局；
 
 
 
